<resources>
    <string name="app_name">RinkDepth3</string>
    <string name="title_proRink">Pro Rink</string>
    <string name="title_jrRink">Jr Rink</string>
    <string name="title_compare">Compare</string>
    <string name="view_string">View</string>
    <string name="upload_string">Upload</string>
    <string name="new_string">New</string>
    <string name="back_string">Back</string>
    <string name="select_string">Select</string>
    <string name="average_string">Average:</string>
    <string name="outside_string">Outside:</string>
    <string name="inside_string">Inside:</string>
</resources>