<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_prorink">

    <fragment
        android:id="@+id/navigation_prorink"
        android:name="com.example.rinkdepth3.ui.proRink.ProRinkFragment"
        android:label="@string/title_proRink"
        tools:layout="@layout/fragment_prorink" />

    <fragment
        android:id="@+id/navigation_jrrink"
        android:name="com.example.rinkdepth3.ui.jrRink.JrRinkFragment"
        android:label="@string/title_jrRink"
        tools:layout="@layout/fragment_jrrink" />

    <fragment
        android:id="@+id/navigation_compare"
        android:name="com.example.rinkdepth3.ui.compare.CompareFragment"
        android:label="@string/title_compare"
        tools:layout="@layout/fragment_compare" />
</navigation>